2007-05-23 9:44 nick

	* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.


2007-05-22 20:34 nick

	* plugins/launcher/launcher-dialog.c: Always update the panel icon when dropping
	a desktop file in the frame.

2007-05-22 12:33 nick

	* configure.in.in, plugins/launcher/launcher-exec.c: Avoid zombie processes.

2007-03-27 16:31 nick

	* Backport trunk

2007-03-18 15:46 nick

	* libxfce4panel/xfce-hvbox.c: Mmm thought orientation was a property... Fix that.

2007-03-18 15:23 nick

	* libxfce4panel: Add visibility support to reduce the library size a bit.
        * libxfce4panel/xfce-panel-macros.h: Add macros to disable debugging for
          release builds.
	* Various code cleanups and improvements.

2007-03-18 11:40 nick

	* plugins/launcher/launcher.c: Fix insensitive button after adding items to the panel.

2007-03-17 0:00  nick

	* Improve the icons with some tango ones or the standard icon names. Also remove
	  the icons that are not needed anymore.

2007-03-14 9:15  nick

	* plugins/tasklist/tasklist.c: Fix previous commit

2007-03-14 9:15  nick

	*libxfce4panel/Makefile.am: Try to fix bug 3002.

2007-03-14 8:38   nick

	* plugins/tasklist/tasklist.c: Fix bug 3011: expand setting not saved.

2007-03-10 16:07  nick

	* plugins/launcher/launcher-dialog.c: Don't append the %f. Too much side effects as
	  suggested by Jannis.

2007-03-10 8:27   nick

	* plugins/launcher/launcher-exec.c: ifdef the startup data structure.
	  Bug 2997, patch from Peter de Ridder.

2007-03-07 19:35  nick

	* libxfce4panel/xfce-panel-plugin-iface.c: Don't show the right-click menu
	  when the user is not allowed to customize the panel. This way the
	  xfce_panel_plugin_menu_insert_item items are never show (also the
	  'save' ones), but they are hardly used (bad excuse, I know).

2007-03-05 21:55  nick

	* panel/panel-dialogs.c: Set Full Height or Full Width based on the panel position.
	  This partly fixes Bug #2465.

2007-03-05 21:21  nick
