@@ -1,3 +1,7 @@
+2007-05-24 14:00 nick
+
+	* panel/panel-item-manager.c: Improve the module warnings a bit.
+
 2007-05-23 9:44 nick
 
 	* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.
